Add local storage, improve control flow, improve application design (untested)